2020 - heute Section Finish

--- a/index.html
+++ b/index.html
@@ -45,8 +45,26 @@
                     <h2>Münchener Senior-Manager möchte wieder zurück in die Kreativstube</h2>
                     <h3>Liebe Frau Peterkowski,</h3>
                 </div>
-                <p>Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon zwitschernd aßen Mäxchens Vögel Rüben, Joghurt und Quark. "Fix, Schwyz!" quäkt Jürgen blöd vom Paß. Victor jagt zwölf Boxkämpfer quer über den großen Sylter Deich. Falsches Üben von Xylophonmusik quält jeden größeren Zwerg. Heizölrückstoßabdämpfung. Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon zwitschernd aßen Mäxchens Vögel Rüben, Joghurt und Quark. "Fix, Schwyz!" quäkt Jürgen blöd vom Paß. Victor jagt zwölf Boxkämpfer quer über den großen Sylter Deich. Falsches Üben von Xylophonmusik quält jeden größeren Zwerg. Heizölrückstoßabdämpfung.Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon zwitschernd aßen Mäxchens Vögel Rüben, Joghurt und Quark. "Fix, Schwyz!" quäkt Jürgen blöd vom Paß. Victor jagt zwölf Boxkämpfer quer über den großen Sylter Deich. Falsches Üben von Xylophonmusik quält jeden größeren Zwerg. Heizölrückstoßabdämpfung. Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon zwitschernd aßen Mäxchens Vögel Rüben, Joghurt und Quark. "Fix, Schwyz!" quäkt Jürgen blöd vom Paß. Victor jagt zwölf Boxkämpfer quer über den großen Sylter Deich. Falsches Üben von Xylophonmusik quält jeden größeren Zwerg. Heizölrückstoßabdämpfung.Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. </p>
-                <p>Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon zwitschernd aßen Mäxchens Vögel Rüben, Joghurt und Quark. "Fix, Schwyz!" quäkt Jürgen blöd vom Paß. Victor jagt zwölf Boxkämpfer quer über den großen Sylter Deich. Falsches Üben von Xylophonmusik quält jeden größeren Zwerg. Heizölrückstoßabdämpfung. Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon zwitschernd aßen Mäxchens Vögel Rüben, Joghurt und Quark. "Fix, Schwyz!" quäkt Jürgen blöd vom Paß. Victor jagt zwölf Boxkämpfer quer über den großen Sylter Deich. Falsches Üben von Xylophonmusik quält jeden größeren Zwerg. Heizölrückstoßabdämpfung.Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer.</p>
+                <p>Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax
+                    zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon zwitschernd aßen Mäxchens Vögel Rüben, Joghurt und Quark. "Fix, Schwyz!" quäkt Jürgen blöd vom Paß. Victor jagt zwölf Boxkämpfer
+                    quer über den großen Sylter Deich. Falsches Üben von Xylophonmusik quält jeden größeren Zwerg. Heizölrückstoßabdämpfung. Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im
+                    komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon
+                    zwitschernd aßen Mäxchens Vögel Rüben, Joghurt und Quark. "Fix, Schwyz!" quäkt Jürgen blöd vom Paß. Victor jagt zwölf Boxkämpfer quer über den großen Sylter Deich. Falsches Üben von Xylophonmusik quält
+                    jeden größeren Zwerg. Heizölrückstoßabdämpfung.Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen
+                    Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch
+                    Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon zwitschernd aßen Mäxchens Vögel Rüben, Joghurt
+                    und Quark. "Fix, Schwyz!" quäkt Jürgen blöd vom Paß. Victor jagt zwölf Boxkämpfer quer über den großen Sylter Deich. Falsches Üben von Xylophonmusik quält jeden größeren Zwerg. Heizölrückstoßabdämpfung.
+                    Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax
+                    zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon zwitschernd aßen Mäxchens Vögel Rüben, Joghurt und Quark. "Fix, Schwyz!" quäkt Jürgen blöd vom Paß. Victor jagt zwölf Boxkämpfer
+                    quer über den großen Sylter Deich. Falsches Üben von Xylophonmusik quält jeden größeren Zwerg. Heizölrückstoßabdämpfung.Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im
+                    komplett verwahrlosten Taxi quer durch Bayern. </p>
+                <p>Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten
+                    Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon zwitschernd aßen Mäxchens
+                    Vögel Rüben, Joghurt und Quark. "Fix, Schwyz!" quäkt Jürgen blöd vom Paß. Victor jagt zwölf Boxkämpfer quer über den großen Sylter Deich. Falsches Üben von Xylophonmusik quält jeden größeren Zwerg.
+                    Heizölrückstoßabdämpfung. Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den
+                    großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon zwitschernd aßen Mäxchens Vögel Rüben, Joghurt und Quark. "Fix, Schwyz!" quäkt Jürgen blöd vom
+                    Paß. Victor jagt zwölf Boxkämpfer quer über den großen Sylter Deich. Falsches Üben von Xylophonmusik quält jeden größeren Zwerg. Heizölrückstoßabdämpfung.Zwei flinke Boxer jagen die quirlige Eva und ihren
+                    Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer.</p>
                 <div class="signeture">
                     <img src="assets/img/signeture.png" alt="Signeture">
                 </div>
@@ -56,17 +74,161 @@
     <section id="florian-section">
         <div class="container">
             <div class="row">
-                <h2 class="d-heading">Florian Lafay <span class="sub-heading">Lead Designer, Account Manager, Art Director & mehr</span></h2>
+                <div class="col-md-8-profile bg-light">
+                    <h2 class="d-heading">Florian Lafay <span class="sub-heading">Lead Designer, Account Manager, Art Director & mehr</span></h2>
+                    <span>Mobile: +49 175 208 79 62</span>
+                    <span class="m-5">E-Mail: lafayflorian@gmail.com</span>
+                    <p class="p-text">Als Digital Native blicke ich auf mittlerweile 10 erfolgreiche Jahre in der Werbe- und Marketingbranche zurück. Dabei begleitete ich bisher Marken wie Fujitsu, LOTTO Bayern und F-Secure
+                        als Senior Project-Manager, digitaler Designer und auf Art-Direktions-Basis.</p>
+                    <div class="display-img">
+                        <img src="assets/img/profile-img.png" alt="Profile">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+    <section id="service-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-6">
+                    <div class="service-item">
+                        <a href="">
+                            <img src="assets/img/img01.jpg" alt="">
+                            <div class="service-overlay">
+                                <div class="service-caption">
+                                    <h5>Kernkompetenzen & Skill-Sets</h5>
+                                    <h6>BLIND Wie ich mich seit 11 Jahren in der Branche weiterentwickelt habe.</h6>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="service-item">
+                        <a href="">
+                            <img src="assets/img/img02.jpg" alt="">
+                            <div class="service-overlay">
+                                <div class="service-caption">
+                                    <h5>Kernkompetenzen & Skill-Sets</h5>
+                                    <h6>BLIND Wie ich mich seit 11 Jahren in der Branche weiterentwickelt habe.</h6>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="service-item">
+                        <a href="">
+                            <img src="assets/img/img03.jpg" alt="">
+                            <div class="service-overlay">
+                                <div class="service-caption">
+                                    <h5>Kernkompetenzen & Skill-Sets</h5>
+                                    <h6>BLIND Wie ich mich seit 11 Jahren in der Branche weiterentwickelt habe.</h6>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="service-item">
+                        <a href="">
+                            <img src="assets/img/img04.jpg" alt="">
+                            <div class="service-overlay">
+                                <div class="service-caption">
+                                    <h5>Kernkompetenzen & Skill-Sets</h5>
+                                    <h6>BLIND Wie ich mich seit 11 Jahren in der Branche weiterentwickelt habe.</h6>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="service-item">
+                        <a href="">
+                            <img src="assets/img/img05.jpg" alt="">
+                            <div class="service-overlay">
+                                <div class="service-caption">
+                                    <h5>Kernkompetenzen & Skill-Sets</h5>
+                                    <h6>BLIND Wie ich mich seit 11 Jahren in der Branche weiterentwickelt habe.</h6>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="service-item">
+                        <a href="">
+                            <img src="assets/img/img01.jpg" alt="">
+                            <div class="service-overlay">
+                                <div class="service-caption">
+                                    <h5>Kernkompetenzen & Skill-Sets</h5>
+                                    <h6>BLIND Wie ich mich seit 11 Jahren in der Branche weiterentwickelt habe.</h6>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div id="heute-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 heute-sidebar">
+                    <h4><span class="back-bg">2020 - heute</span></h4>
+                    <ul>
+                        <li>CCOVID-19 pandemic</li>
+                        <li>Australian bushfires</li>
+                        <li>Prince Harry and Meghan Markle quit royal family</li>
+                        <li>Stock market crash 2020</li>
+                        <li>Impeachment of President Donald Trump</li>
+                        <li>Beirut explosion</li>
+                    </ul>
+                </div>
+                <div class="col-md-10 right-side">
+                    <div class="row">
+                        <div class="col-md-3 left">
+                            <h3>schalk & friends</h3>
+                            <p>wir wirkt wunder</p>
+                        </div>
+                        <div class="col-md-9">
+                            <h2>Account Manager Digital</h2>
+                            <h5>Job Description</h5>
+                            <p>Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon zwitschernd aßen Mäxchens Vögel Rüben, Joghurt und Quark. "Fix, Schwyz!" quäkt Jürgen blöd</p>
+                            <h5>Verantwortlichkeiten</h5>
+                            <div class="col-md-12">
+                                <a href="" class="btn btn-outline-success">Verantwortung</a>
+                                <a href="" class="btn btn-outline-success">Verantwortung</a>
+                                <a href="" class="btn btn-outline-success">Verantwortung</a>
+                                <a href="" class="btn btn-outline-success">Verantwortung</a>
+                                <a href="" class="btn btn-outline-success">Verantwortung</a>
+                                <a href="" class="btn btn-outline-success">Verantwortung</a>
+                                <a href="" class="btn btn-outline-success">Verantwortung</a>
+                                <a href="" class="btn btn-outline-success">Verantwortung</a>
+                            </div>
+                            <h5>Rollen</h5>
+                            <div class="col-md-12">
+                                <a href="" class="btn btn-outline-success">Rollen</a>
+                                <a href="" class="btn btn-outline-success">Rollen</a>
+                                <a href="" class="btn btn-outline-success">Rollen</a>
+                                <a href="" class="btn btn-outline-success">Rollen</a>
+                                <a href="" class="btn btn-outline-success">Rollen</a>
+                                <a href="" class="btn btn-outline-success">Rollen</a>
+                            </div>
+                        </div>
+                        <div class="mini-banner">
+                            <img src="assets/img/mini-banner.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" crossorigin="anonymous">
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
