--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" rossorigin="anonymous">
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css"/>
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css"/>
     <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 <body>
     <!--Navbar-->
@@ -194,7 +199,8 @@
                         <div class="col-md-9">
                             <h2>Account Manager Digital</h2>
                             <h5>Job Description</h5>
-                            <p>Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon zwitschernd aßen Mäxchens Vögel Rüben, Joghurt und Quark. "Fix, Schwyz!" quäkt Jürgen blöd</p>
+                            <p>Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich.
+                                Vogel Quax zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon zwitschernd aßen Mäxchens Vögel Rüben, Joghurt und Quark. "Fix, Schwyz!" quäkt Jürgen blöd</p>
                             <h5>Verantwortlichkeiten</h5>
                             <div class="col-md-12">
                                 <a href="" class="btn btn-outline-success">Verantwortung</a>
@@ -224,11 +230,52 @@
             </div>
         </div>
     </div>
+    <div id="slick-section">
+       <div class="col-md-12">
+           <div class="slider responsive">
+               <img src="assets/img/slick/01.jpg" alt="">
+               <img src="assets/img/slick/02.jpg" alt="">
+               <img src="assets/img/slick/01.jpg" alt="">
+               <img src="assets/img/slick/02.jpg" alt="">
+               <img src="assets/img/slick/01.jpg" alt="">
+               <img src="assets/img/slick/02.jpg" alt="">
+               <img src="assets/img/slick/01.jpg" alt="">
+               <img src="assets/img/slick/02.jpg" alt="">
+               <img src="assets/img/slick/01.jpg" alt="">
+               <img src="assets/img/slick/02.jpg" alt="">
+               <img src="assets/img/slick/01.jpg" alt="">
+               <img src="assets/img/slick/02.jpg" alt="">
+           </div>
+           <input type="range" min="0" max="100" id="slider">
+       </div>
+    </div>
+    <div id="susbildung-section">
+        <div class="col-5 box-1">
+            <h2>Ausbildung</h2>
+            <div class="row">
+                <div class="col-md-2">
+                    <h6>2012</h6>
+                </div>
+                <div class="col-md-8">
+                    <h5>Mediengestalter Digital & Print, Gestaltung und Technik</h5>
+                    <p>Industrie- und Handelskammer für München & Oberbayern, München</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-5 box-2">
+            <h2>Right Sidebar</h2>
+
+        </div>
+    </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="vendor/slick/slick.min.js"></script>
+    <script src="assets/js/script.js"></script>
+
 </body>
 
 </html>
